--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Fengqi Liu(刘俸奇)"
-  avatar           : "WechatIMG1.jpeg"
+  avatar           : "fengqiliu.jpg"
   bio              : "南开大学经济学院"
   location         : "中国天津"
   employer         :
